# TUI-coder

./: APP_STATE.md  cline_tool_task.md  plan.md  pyproject.toml  requirements.txt  rules.md
agent/: cli.py
agent/core/: agent.py  bedrock.py  conversation.py  prompt.py  session.py
agent/prompts/: conversation_summary.md  conversation_system.md  executor_system.md  next_prompt_suggestion.md  planner_system.md
agent/tools/: __init__.py  base.py  registry.py  skills.py
agent/tui/: agent.tcss  app.py  commands.py  events.py  panels.py
sys_prompt_references/: opencode.md
tests/: test_commands.py  test_conversation.py  test_prompts.py  test_tools.py
